--- a/meson.build
+++ b/meson.build
@@ -353,6 +353,7 @@ srcfiles_bmcweb = [
 
 srcfiles_unittest = [
   'include/ut/dbus_utility_test.cpp',
+  'include/ut/multipart_test.cpp',
   'include/ut/http_utility_test.cpp',
   'include/ut/human_sort_test.cpp',
   'redfish-core/ut/privileges_test.cpp',
