WIP: Redfish: Query parameters: Only
Add the query parameter "only" for redfish.
The specification is based on DSP0266_1.8.0.

This commit is inspired by the commit that carries the same title, but
is largely unique, namely, in that it adds the core feature to be able
to recall handle with a new Response object, and make sure the result
gets to the connection.  It does this by swapping the handlers and
implementing move semantics on the Response object.  It definitely needs
broken up into a few smaller patches, but it does pass the below tests
without any aparent seg faults or ownership issues.

It implements a number of cleanups that deserve their own patches, and
will be split up accordingly, but for the moment, I think this is a good
start to getting filter and expand support in the future.

Tested:
Validator passes
~$ curl -i -k -H "X-Auth-Token: $token" -X GET "https://${bmc}/redfish/v1/Systems"

~$ curl -i -k -H "X-Auth-Token: $token" -X GET "https://${bmc}/redfish/v1/Systems?only"

Change-Id: I123d8ab8bcd88a0b63ff131f6b98548951989755

--- a/meson.build
+++ b/meson.build
@@ -237,6 +237,15 @@ if (cxx.get_id() == 'gcc' and cxx.version().version_compare('>8.0'))
   endif
 endif
 
+
+     add_project_arguments([
+       '-DBMCWEB_ENABLE_LOGGING',
+       '-DBMCWEB_ENABLE_DEBUG'
+       ],
+      language : 'cpp')
+
+
+
 # Set Compiler Security flags
 
 security_flags = [
