Add support for MetricDefinition property in MetricReport
Added MetricDefinition as part of MetricValues array returned by
MetricReport. It contains single @odata.id with URI to proper
MetricDefinition resource - depending on MetricProperty.

Testing done:
- GET request on redfish/v1/TelemetryService/MetricReports
  got response with MetricDefinition and proper id inside
  MetricValues array.

Testing steps:
1. POST on redfish/v1/TelemetryService/MetricReportDefinitions
   with body:
{
  "Id": "PeriodicReport_1",
  "MetricReportDefinitionType": "Periodic",
  "ReportActions": [
    "LogToMetricReportsCollection",
    "RedfishEvent"
  ],
  "Metrics": [
    {
      "MetricId": "sensor_1",
      "MetricProperties": [
        "/redfish/v1/Chassis/AC_Baseboard/Thermal#/Fans/1/Reading"
      ]
    }
  ],
  "Schedule": {
    "RecurrenceInterval": "PT10S"
  }
}

2. GET on redfish/v1/TelemetryService/MetricReports/PeriodicReport_1
   should return:
{
  "@odata.id":
  "/redfish/v1/TelemetryService/MetricReports/PeriodicReport_1",
  "@odata.type": "#MetricReport.v1_3_0.MetricReport",
  "Id": "PeriodicReport_1",
  "MetricReportDefinition": {
    "@odata.id":
    "/redfish/v1/TelemetryService/MetricReportDefinitions/PeriodicReport_1"
  },
  "MetricValues": [
    {
      "MetricDefinition": {
        "@odata.id":
        "/redfish/v1/TelemetryService/MetricDefinitions/Rotational"
      },
      "MetricId": "sensor_1",
      "MetricProperty":
      "/redfish/v1/Chassis/AC_Baseboard/Thermal#/Fans/1/Reading",
      "MetricValue": "nan",
      "Timestamp": "1970-01-01T00:03:21+00:00"
    }
  ],
  "Name": "PeriodicReport_1",
  "Timestamp": "1970-01-01T00:03:21+00:00"
}

Change-Id: I7181c612f9b443015d551259bae25303aa436822
Signed-off-by: Szymon Dompke <szymon.dompke@intel.com>

--- a/meson.build
+++ b/meson.build
@@ -363,6 +363,8 @@ srcfiles_unittest = [
   'http/ut/utility_test.cpp'
 ]
 
+srcfiles_unittest_dependencies = ['redfish-core/src/error_messages.cpp', 'src/boost_url.cpp']
+
 # Gather the Configuration data
 
 conf_data = configuration_data()
@@ -420,9 +422,7 @@ executable('bmcweb',srcfiles_bmcweb,
 if(get_option('tests').enabled())
   foreach src_test : srcfiles_unittest
     testname = src_test.split('/')[-1].split('.')[0]
-    test(testname,executable(testname, 
-        [src_test,
-        'src/boost_url.cpp'],
+    test(testname,executable(testname,[src_test] + srcfiles_unittest_dependencies,
                 include_directories : incdir,
                 install_dir: bindir,
                 dependencies: [
