--- a/meson.build
+++ b/meson.build
@@ -360,7 +360,8 @@ srcfiles_unittest = [
   'redfish-core/ut/configfile_test.cpp',
   'redfish-core/ut/time_utils_test.cpp',
   'redfish-core/ut/hex_utils_test.cpp',
-  'http/ut/utility_test.cpp'
+  'http/ut/utility_test.cpp',
+  'redfish-core/lib/ut/service_root_test.cpp'
 ]
 
 # Gather the Configuration data
