Adding new redfish testing for serviceroot
* Break serviceroot callback into the free function.
* Write the request and response objects.
* Test the result of serviceroot free function

Signed-off-by: John Edward Broadbent <jebr@google.com>
Change-Id: I560cbb0309c25670cacd81c32bccae3445ccca7b

--- a/meson.build
+++ b/meson.build
@@ -373,7 +373,8 @@ srcfiles_unittest = [
   'redfish-core/ut/lock_test.cpp',
   'redfish-core/ut/configfile_test.cpp',
   'redfish-core/ut/time_utils_test.cpp',
-  'http/ut/utility_test.cpp'
+  'http/ut/utility_test.cpp',
+  'redfish-core/lib/ut/service_root_test.cpp'
 ]
 
 # Gather the Configuration data
