--- a/meson.build
+++ b/meson.build
@@ -77,6 +77,7 @@ feature_map = {
   'redfish'                         : '-DBMCWEB_ENABLE_REDFISH',
   'redfish-bmc-journal'             : '-DBMCWEB_ENABLE_REDFISH_BMC_JOURNAL',
   'redfish-cpu-log'                 : '-DBMCWEB_ENABLE_REDFISH_CPU_LOG',
+  'redfish-host-logger'             : '-DBMCWEB_ENABLE_REDFISH_HOST_LOGGER',
   'redfish-dbus-log'                : '-DBMCWEB_ENABLE_REDFISH_DBUS_LOG_ENTRIES',
   'redfish-provisioning-feature'    : '-DBMCWEB_ENABLE_REDFISH_PROVISIONING_FEATURE',
   'redfish-dump-log'                : '-DBMCWEB_ENABLE_REDFISH_DUMP_LOG',
