WIP: Disable exceptions in bmcweb
This commit is the beginnings of being able to completely disable
exceptions in bmcweb.  It requires a small patchset to SDBUSPLUS to
compile, but shows some promise.

TODO:
- Need to wait for https://github.com/openembedded/meta-openembedded/commit/5eb46e36a66836f6bbc8a0ffd54ae8a7c10a841f
to get picked up in a subtree merged

- need to wait for
https://gerrit.openbmc-project.xyz/c/openbmc/sdbusplus/+/46843 to merge

- Find an alternative to throw inside of constexpr methods that causes
the compilation to fail, but is still supported with exceptions
disabled.  Maybe #error directive?

Tested:
When compiled for qemu prior to this patch, the bmcweb binary was
1770377 bytes (1728KB).
After this patch, bmcweb drops to 1204259 bytes (1176KB) or a 30%
reduction in binary size.  If this pattern were applied more widely to
OpenBMC C++ code, it could significantly reduce the size of our
binaries.

Compressed binary size was estimated using:
gzip -c $BBPATH/tmp/work/qemux86-openbmc-linux/obmc-phosphor-image/1.0-r0/rootfs/usr/bin/bmcweb | wc -c

Signed-off-by: Ed Tanous <edtanous@google.com>
Change-Id: Ie8d7246eef09fb3676e5f0a07a35b6a055c621e9

--- a/meson.build
+++ b/meson.build
@@ -263,6 +263,8 @@ cxx.get_supported_arguments([
   '-DBOOST_ASIO_SEPARATE_COMPILATION',
   '-DBOOST_ERROR_CODE_HEADER_ONLY',
   '-DBOOST_SYSTEM_NO_DEPRECATED',
+  '-DBOOST_DISABLE_EXCEPTIONS',
+  '-DSDBUSPLUS_DISABLE_BOOST_COROUTINES',
   '-DBOOST_ASIO_NO_DEPRECATED',
   '-DBOOST_ALL_NO_LIB',
   '-DBOOST_NO_RTTI',
@@ -271,7 +273,7 @@ cxx.get_supported_arguments([
   '-DBOOST_URL_STANDALONE',
   '-DBOOST_URL_HEADER_ONLY',
   '-DBOOST_ALLOW_DEPRECATED_HEADERS',
-  '-DJSON_NOEXCEPTION'
+  '-DJSON_NOEXCEPTION',
 ]),
 language : 'cpp')
 
