Added Hypervisor Serial Socket
This commit adds `wss://${window.location.host}/console1` WebSocket
into bmcweb. it retrieves 'PHYP debug shell' info and displays
WebSocket data into WebUI using SOL (Serial over LAN) console.

'console1' read data from UNIX domain socket '@obmc-console.hypervisor'
and display it in WebUI.

Privilege set to {"ConfigureComponents", "ConfigureManager"}.
That mean only Administrator and Operator can retrieve console data.

Tested:
  configure UNIX domain socket '@obmc-console.hypervisor' with
  'wss://${window.location.host}/console0' (which currently use for
  retrieve 'host serial console data on SOL'). The test is successful,
  able to receive 'PHYP debug shell' data in SOL on WebUI.

Signed-off-by: Abhishek Patel <Abhishek.Patel@ibm.com>
Change-Id: Icece6ceddd0eeab8db7ebf1e5e863c22a59ae45f

--- a/meson.build
+++ b/meson.build
@@ -60,6 +60,7 @@ feature_map = {
 'insecure-disable-csrf'           : '-DBMCWEB_INSECURE_DISABLE_CSRF_PREVENTION',
 'insecure-disable-ssl'            : '-DBMCWEB_INSECURE_DISABLE_SSL',
 'host-serial-socket'              : '-DBMCWEB_ENABLE_HOST_SERIAL_WEBSOCKET',
+'hypervisor-serial-socket'        : '-DBMCWEB_ENABLE_HYPERVISOR_SERIAL_WEBSOCKET',
 'ibm-management-console'          : '-DBMCWEB_ENABLE_IBM_MANAGEMENT_CONSOLE',
 'google-api'                      : '-DBMCWEB_ENABLE_GOOGLE_API',
 'kvm'                             : '-DBMCWEB_ENABLE_KVM' ,
