Fix NTPServers are hard-coded for eth0
Since bmcweb is getting and patching NTPServers only from
'/xyz/openbmc_project/network/eth0' object, and this is hard-coded,
if we use eth1, it will broken the NTP configuration and fail to
route to the correct NTPServer.

Add global configuration to configure NTP server in the meson.build
file, and set eth0 as the default ethernet.

Tested: Change ntp ethernet to eth1 in bbappend file and
update NTPServer through Redfish, we can see the NTPServer change of
eth1 on D-Bus.

bbappend: EXTRA_OEMESON:append = "-Dntp-ethernet=eth1"
check D-Bus:
busctl get-property xyz.openbmc_project.Network
/xyz/openbmc_project/network/eth1
xyz.openbmc_project.Network.EthernetInterface NTPServers
as 1 "192.168.1.2"

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: I624afa4154464524792d072966bf1ee9db594661

--- a/bmcweb_config.h.in
+++ b/bmcweb_config.h.in
@@ -1,7 +1,7 @@
 #pragma once
 
-#include <cstdint>
 #include <cstddef>
+#include <cstdint>
 
 // clang-format off
 constexpr const int bmcwebInsecureDisableXssPrevention =
@@ -10,4 +10,6 @@ constexpr const int bmcwebInsecureDisableXssPrevention =
 constexpr const size_t bmcwebHttpReqBodyLimitMb = @BMCWEB_HTTP_REQ_BODY_LIMIT_MB@;
 
 constexpr const char* mesonInstallPrefix = "@MESON_INSTALL_PREFIX@";
+
+constexpr const char* ntpEthernet = "@NTP_ETHERNET@";
 // clang-format on
