Test for sdbusplus header in meson.build
Changing how the test for sdbusplus works, to trigger on a missing
header, to ensure a new-enough version of this library is pulled in,
to catch the case of an old sdbusplus library existing on the system
but not having this header.

Also cleaned up a warning message, by picking up dependencies from
the nlohmann_json package, as recommended, instead of declaring those
dependencies here.

Tested: My local build now works, as before, it didn't.

Signed-off-by: Josh Lehan <krellan@google.com>
Change-Id: Ibc02a7543bd3d11de8ad4114853253fb1f6b4cd1

--- a/meson.build
+++ b/meson.build
@@ -293,7 +293,14 @@ openssl = dependency('openssl', required : true)
 bmcweb_dependencies += [pam, atomic, openssl]
 
 sdbusplus = dependency('sdbusplus', required : false, include_type: 'system')
+sdbusplus_build = false
 if not sdbusplus.found()
+  sdbusplus_build = true
+endif
+if not cxx.has_header('sdbusplus/utility/dedup_variant.hpp')
+  sdbusplus_build = true
+endif
+if sdbusplus_build
   sdbusplus_proj = subproject('sdbusplus', required: true)
   sdbusplus = sdbusplus_proj.get_variable('sdbusplus_dep')
   sdbusplus = sdbusplus.as_system('system')
@@ -317,13 +324,8 @@ bmcweb_dependencies += [systemd, zlib]
 if cxx.has_header('nlohmann/json.hpp')
     nlohmann_json = declare_dependency()
 else
-    subproject('nlohmann', required: false)
-    nlohmann_json = declare_dependency(
-        include_directories: [
-            'subprojects/nlohmann/single_include',
-            'subprojects/nlohmann/single_include/nlohmann',
-        ]
-    )
+    nlohmann_json_proj = subproject('nlohmann', required: true)
+    nlohmann_json = nlohmann_json_proj.get_variable('nlohmann_json_dep')
     nlohmann_json = nlohmann_json.as_system('system')
 endif
 bmcweb_dependencies += nlohmann_json
