Test for sdbusplus header in meson.build
Changing how the test for sdbusplus works, to trigger on a missing
header, to ensure a new-enough version of this library is pulled in,
to catch the case of an old sdbusplus library existing on the system
but not having this header.

Tested: My local build now works, as before, it didn't.

Signed-off-by: Josh Lehan <krellan@google.com>
Change-Id: Ibc02a7543bd3d11de8ad4114853253fb1f6b4cd1

--- a/meson.build
+++ b/meson.build
@@ -283,7 +283,14 @@ openssl = dependency('openssl', required : true)
 bmcweb_dependencies += [pam, atomic, openssl]
 
 sdbusplus = dependency('sdbusplus', required : false, include_type: 'system')
+sdbusplus_build = false
 if not sdbusplus.found()
+  sdbusplus_build = true
+endif
+if not cxx.has_header('sdbusplus/utility/dedup_variant.hpp')
+  sdbusplus_build = true
+endif
+if sdbusplus_build
   sdbusplus_proj = subproject('sdbusplus', required: true)
   sdbusplus = sdbusplus_proj.get_variable('sdbusplus_dep')
   sdbusplus = sdbusplus.as_system('system')
