meson: update deprecated get_pkgconfig_variable
Current versions of meson warn about the use of a deprecated API and
suggest a replacement.  Follow the advice.

    WARNING: Project targeting '>=0.57.0' but tried to use feature
    deprecated since '0.56.0': Dependency.get_pkgconfig_variable.
    use Dependency.get_variable(pkgconfig : ...) instead

Signed-off-by: Patrick Williams <patrick@stwcx.xyz>
Change-Id: I3aa4de97cae02cf7691adf4dd5a19e257914d9cc

--- a/meson.build
+++ b/meson.build
@@ -378,7 +378,7 @@ configure_file(input: 'bmcweb_config.h.in',
 
 # Configure and install systemd unit files
 
-systemd_system_unit_dir = systemd.get_pkgconfig_variable('systemdsystemunitdir')
+systemd_system_unit_dir = systemd.get_variable(pkgconfig: 'systemdsystemunitdir')
 
 bindir = get_option('prefix') + '/' +get_option('bindir')
 
@@ -421,7 +421,7 @@ executable('bmcweb',srcfiles_bmcweb,
 if(get_option('tests').enabled())
   foreach src_test : srcfiles_unittest
     testname = src_test.split('/')[-1].split('.')[0]
-    test(testname,executable(testname, 
+    test(testname,executable(testname,
         [src_test,
         'src/boost_url.cpp'],
                 include_directories : incdir,
