meson: upgrade tinyxml wrap file
Use `meson wrap update tinyxml` to get the latest version (9.0.0)
and simplify the corresponding meson directives.

Signed-off-by: Patrick Williams <patrick@stwcx.xyz>
Change-Id: I7513c2dca11ad9728c530e2f44986916594b2407

--- a/meson.build
+++ b/meson.build
@@ -291,12 +291,10 @@ endif
 bmcweb_dependencies += sdbusplus
 
 if get_option('rest').enabled()
-  tinyxml = dependency('tinyxml2', required: false)
-  if not tinyxml.found()
-    tinyxml_proj = subproject('tinyxml2', required: true)
-    tinyxml = tinyxml_proj.get_variable('tinyxml2_dep')
-    tinyxml = tinyxml.as_system('system')
-  endif
+  tinyxml = dependency('tinyxml2',
+      default_options: ['tests=false'],
+      include_type: 'system',
+  )
   bmcweb_dependencies += tinyxml
 endif
 
